examples/test/testpolicy6067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6067
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key13: value40
      key15: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value6
          key19: value40
          key0: value47
      podSelector:
        matchLabels:
          key49: value27
          key40: value9
